--- a/app/styles/components/TopBarComp.scss
+++ b/app/styles/components/TopBarComp.scss
@@ -16,7 +16,7 @@
   }
 
   > .logo {
-    width: 140px;
+    width: 180px;
 
     @include viewports(up-to small) {
       margin: 1rem 0;
